# onoro

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  test.prof
.github/workflows/: onoro-lint.yml  onoro-test.yml
cmake/: CMakeAVXCheck.cmake
cmake/arch_test/: test_avx.s  test_empty.c
include/: dihedral_group.h  game.h  game_eq.h  game_hash.h  game_view.h  hash_group.h  hex_pos.h  old_game.h  onoro.h  print_csi.h  random.h  simple_onoro.h  transposition_table.h  union_find.h
proto/: game_state.proto
pylib/: coord.py  init.py  onoro.py  test_eq_under_symm.py  test_next_moves.py
src/: main.cc  onoro.cc  random.c  test_bench.cc  test_hash_group.cc  test_next_moves.cc  test_next_moves_cc_lib.cc  test_next_moves_cc_pylib.cc  test_symmetries_cc_pylib.cc  test_transposition_table.cc  test_union_find.cc
